--- a/src/App.css
+++ b/src/App.css
@@ -71,23 +71,20 @@ body.dark-theme {
   .App {
     flex-direction: column;
     align-items: center;
-    padding-top: 80px;
+    padding-top: 0; /* Remove top padding since we have fixed header */
   }
   
   .main-content {
     margin-left: 0;
-    margin-top: 0;
+    margin-top: 80px; /* Account for fixed TOC header */
     padding: 0 1rem;
     max-width: 100%;
   }
 }
 
 @media (max-width: 480px) {
-  .App {
-    padding-top: 70px;
-  }
-  
   .main-content {
+    margin-top: 70px; /* Slightly less margin for smaller screens */
     padding: 0 0.5rem;
   }
 }
