--- a/src/styles/game/PaperButton.css
+++ b/src/styles/game/PaperButton.css
@@ -17,6 +17,7 @@
   outline: none;
   user-select: none;
   -webkit-user-select: none;
+  -webkit-tap-highlight-color: transparent;
   transition: transform 0.2s ease;
 }
 
@@ -57,3 +58,4 @@
     height: 8rem;
   }
 }
+
